# ViaCep_Test

./: .coverage  README.md  cep.py  cep_resource.py  coverage.xml  pyproject.toml  sonar-project.properties  test_cep.py  test_viacep.py  test_web.py  viacep.py  web.py
