[project]
name = "unimar-viacep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "falcon>=4.2.0",
    "uvicorn>=0.38.0",
]

[tool.uv]
dev-dependencies = [
    "aiounittest>=1.5.0",
    "autopep8>=2.3.2",
    "coverage>=7.11.3",
]
